--- a/TD6/index.html
+++ b/TD6/index.html
@@ -20,6 +20,11 @@
     </style>
   <body>
     <h1>API</h1>
+    <label for="search">Search the site:</label>
+    <input type="search" id="search" aria-label="Search through site content">
+    <button onclick='Search()'>Search</button>
+  </br>
+    <h1></h1>
     <a id='headlines'></a>
   </body>
 </html>
