--- a/TD6/index.html
+++ b/TD6/index.html
@@ -20,8 +20,8 @@
     </style>
   <body>
     <h1>API</h1>
-    <label for="search">Search the site:</label>
-    <input type="search" id="search" aria-label="Search through site content">
+    <label for="search">Search:</label>
+    <input type="search" id="search">
     <button onclick='Search()'>Search</button>
   </br>
     <h1></h1>
