--- a/TD6/node-ws6/public/index.html
+++ b/TD6/node-ws6/public/index.html
@@ -72,6 +72,11 @@
   				<button id="randomdisplay" onclick="randomdisplay()">Display 10 random forms:</button>
   			</div>
   		</div>
+      <div class="row">
+        <div id="box3">
+          <button id="load" onclick="load()">Load and display history:</button>
+        </div>
+      </div>
       <datalist id="5color">
         <option value="#22223B"></option>
         <option value="#4A4E68"></option>
